esboço header finalizado

--- a/src/output.css
+++ b/src/output.css
@@ -10,6 +10,8 @@
     --color-amber-100: oklch(96.2% 0.059 95.617);
     --color-amber-300: oklch(87.9% 0.169 91.605);
     --spacing: 0.25rem;
+    --text-7xl: 4.5rem;
+    --text-7xl--line-height: 1;
     --text-8xl: 6rem;
     --text-8xl--line-height: 1;
     --animate-pulse: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
@@ -175,35 +177,32 @@
   .h-10 {
     height: calc(var(--spacing) * 10);
   }
-  .h-\[100\%\] {
-    height: 100%;
-  }
   .h-dvh {
     height: 100dvh;
   }
-  .w-0 {
-    width: calc(var(--spacing) * 0);
+  .w-3 {
+    width: calc(var(--spacing) * 3);
   }
-  .w-2 {
-    width: calc(var(--spacing) * 2);
+  .w-3\/5 {
+    width: calc(3/5 * 100%);
   }
-  .w-6 {
-    width: calc(var(--spacing) * 6);
+  .w-11 {
+    width: calc(var(--spacing) * 11);
   }
-  .w-10 {
-    width: calc(var(--spacing) * 10);
+  .w-11\/12 {
+    width: calc(11/12 * 100%);
   }
   .w-20 {
     width: calc(var(--spacing) * 20);
   }
+  .w-\[30\%\] {
+    width: 30%;
+  }
+  .w-\[40\%\] {
+    width: 40%;
+  }
   .w-\[60\%\] {
     width: 60%;
-  }
-  .w-\[80\%\] {
-    width: 80%;
-  }
-  .w-\[90\%\] {
-    width: 90%;
   }
   .w-fit {
     width: fit-content;
@@ -213,12 +212,6 @@
   }
   .border-collapse {
     border-collapse: collapse;
-  }
-  .scale-110 {
-    --tw-scale-x: 110%;
-    --tw-scale-y: 110%;
-    --tw-scale-z: 110%;
-    scale: var(--tw-scale-x) var(--tw-scale-y);
   }
   .animate-pulse {
     animation: var(--animate-pulse);
@@ -232,6 +225,12 @@
   .justify-between {
     justify-content: space-between;
   }
+  .gap-10 {
+    gap: calc(var(--spacing) * 10);
+  }
+  .rounded {
+    border-radius: 0.25rem;
+  }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
@@ -242,30 +241,24 @@
   .bg-amber-100 {
     background-color: var(--color-amber-100);
   }
-  .bg-amber-300 {
-    background-color: var(--color-amber-300);
-  }
-  .p-12 {
-    padding: calc(var(--spacing) * 12);
-  }
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
   }
   .px-12 {
     padding-inline: calc(var(--spacing) * 12);
   }
-  .py-8 {
-    padding-block: calc(var(--spacing) * 8);
-  }
   .py-10 {
     padding-block: calc(var(--spacing) * 10);
   }
-  .text-8xl {
-    font-size: var(--text-8xl);
-    line-height: var(--tw-leading, var(--text-8xl--line-height));
+  .text-7xl {
+    font-size: var(--text-7xl);
+    line-height: var(--tw-leading, var(--text-7xl--line-height));
   }
-  .text-amber-300 {
-    color: var(--color-amber-300);
+  .text-\[\#ceaa2c\] {
+    color: #ceaa2c;
+  }
+  .italic {
+    font-style: italic;
   }
   .underline {
     text-decoration-line: underline;
@@ -273,17 +266,6 @@
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
-  }
-  .delay-300 {
-    transition-delay: 300ms;
-  }
-  .delay-600 {
-    transition-delay: 600ms;
-  }
-  .\*\:w-fit {
-    :is(& > *) {
-      width: fit-content;
-    }
   }
   .hover\:scale-110 {
     &:hover {
@@ -295,13 +277,16 @@
       }
     }
   }
-  .hover\:delay-600 {
-    &:hover {
-      @media (hover: hover) {
-        transition-delay: 600ms;
-      }
-    }
-  }
+}
+@property --tw-border-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
+}
+@property --tw-outline-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
 }
 @property --tw-scale-x {
   syntax: "*";
@@ -318,16 +303,6 @@
   inherits: false;
   initial-value: 1;
 }
-@property --tw-border-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
-@property --tw-outline-style {
-  syntax: "*";
-  inherits: false;
-  initial-value: solid;
-}
 @keyframes pulse {
   50% {
     opacity: 0.5;
@@ -336,11 +311,11 @@
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
     *, ::before, ::after, ::backdrop {
+      --tw-border-style: solid;
+      --tw-outline-style: solid;
       --tw-scale-x: 1;
       --tw-scale-y: 1;
       --tw-scale-z: 1;
-      --tw-border-style: solid;
-      --tw-outline-style: solid;
     }
   }
 }
