testes com o fetch

--- a/src/output.css
+++ b/src/output.css
@@ -9,6 +9,7 @@
       "Courier New", monospace;
     --color-amber-100: oklch(96.2% 0.059 95.617);
     --color-amber-300: oklch(87.9% 0.169 91.605);
+    --color-gray-600: oklch(44.6% 0.03 256.802);
     --spacing: 0.25rem;
     --text-3xl: 1.875rem;
     --text-3xl--line-height: calc(2.25 / 1.875);
@@ -174,6 +175,9 @@
   }
 }
 @layer utilities {
+  .fixed {
+    position: fixed;
+  }
   .col-span-full {
     grid-column: 1 / -1;
   }
@@ -276,6 +280,9 @@
   }
   .bg-amber-100 {
     background-color: var(--color-amber-100);
+  }
+  .bg-gray-600 {
+    background-color: var(--color-gray-600);
   }
   .px-8 {
     padding-inline: calc(var(--spacing) * 8);
